# mquantfund

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Procfile  README.md  TRACK.md  pyproject.toml  requirements.txt  roadmap-fundo-quant-vale3-4semanas.md
.github/workflows/: collect-realtime.yml  daily-tasks.yml
docs/: ARCHITECTURE.md  GUIA_VALIDACAO_ESTATISTICA.md  SECRETS.md  pesquisa_quant.md  quant_fund_gpt.md  roadmap-minerals-quant-fund.md  roadmap_mvp_trading_mineiro_vale3.md
jobs/: lseg-data.config.json
jobs/clients/: supabase_client.py
jobs/config/: settings.py
jobs/ingestion/: backfill_historical.py  fetch_auxiliary.py  fetch_iron_ore.py  fetch_vale3.py
jobs/scripts/: backfill.sh  collect_all.py  cron_realtime.sh
jobs/utils/: logger.py
notebooks/: 01_exploratory_analysis.ipynb  02_test_feature_engineering.ipynb
sql/: 001_initial_schema.sql  002_pg_cron_setup.sql  003_add_futures_fields.sql
src/: config.py
src/analysis/: __init__.py  weekly_correlation.py
src/db/: client.py
src/features/: __init__.py  alignment.py  returns.py  volatility.py  zscore.py
src/metrics/: __init__.py  update_weekly.py
src/notifications/: __init__.py  telegram_bot.py
src/reports/: daily_report.py
src/strategy/: __init__.py  signal_generator.py
supabase/: config.toml
supabase/functions/: deno.json
supabase/functions/check-signals/: index.ts
supabase/functions/collect-auxiliary/: index.ts
supabase/functions/collect-iron-ore/: index.ts
